# acpub

./: .gitignore  README.md  notes.txt  tlvstore.todo
clish-0.7.3/: Makefile  config.status  env.sh  libtool  thisrun.sh
clish-0.7.3/.libs/: libclish.lai  libclish.so.0.0.0  liblub.lai  liblub.so.0.0.0  libtinyrl.lai  libtinyrl.so.0.0.0  libtinyxml.lai  libtinyxml.so.0.0.0
clish-0.7.3/clish/: libclish_la-clish_access_callback.lo  libclish_la-clish_script_callback.lo  libclish_la-clish_shutdown.lo  libclish_la-clish_startup.lo  libclish_la-tclish_fini_callback.lo  libclish_la-tclish_init_callback.lo  libclish_la-tclish_script_callback.lo  libclish_la-tclish_show_result.lo
clish-0.7.3/clish/command/: libclish_la-command.lo  libclish_la-command_dump.lo
clish-0.7.3/clish/param/: libclish_la-param.lo  libclish_la-param_dump.lo
clish-0.7.3/clish/pargv/: libclish_la-pargv.lo  libclish_la-pargv_dump.lo
clish-0.7.3/clish/ptype/: libclish_la-ptype.lo  libclish_la-ptype_dump.lo
clish-0.7.3/clish/shell/: libclish_la-shell__get_client_cookie.lo  libclish_la-shell__get_tinyrl.lo  libclish_la-shell__get_view.lo  libclish_la-shell__get_viewid.lo  libclish_la-shell_delete.lo  (+26 more)
clish-0.7.3/test/: bintree  string
clish-0.7.3/tinyrl/: tinyrl.c  tinyrl.lo
clish-0.7.3/tinyxml/: libtinyxml_la-tinystr.lo  libtinyxml_la-tinyxml.lo  libtinyxml_la-tinyxmlerror.lo  libtinyxml_la-tinyxmlparser.lo
clish-0.7.3/xml-examples/: admin-view.xml  global-commands.xml  types.xml
cmake/: CMakeLists.txt  main.c  main.cpp
cmake/math/: CMakeLists.txt  math.cpp  math.hpp
tio/: README.md
(+52 files in other folders)
